--- a/css/Tadekam_Mobile.css
+++ b/css/Tadekam_Mobile.css
@@ -156,16 +156,11 @@ color : #996a0e;
 	left : 0%;
 }
 
-/* .flip-card-inner {
-	position: relative;
-	transition: transform 1s;
-	transform-style: preserve-3d;
-	width: 100%;
-	height: 100%;
-	animation: flipBannerCard 24s infinite;
+ .flip-card-inner {
+	animation: flipBannerCard 18s infinite;
 }
 
-.flip-card-front, .flip-card-back {
+/* .flip-card-front, .flip-card-back { 
 position: absolute;
 width: 100%;
 height: 100%;
@@ -180,16 +175,16 @@ transform: rotateY(0deg);
 .flip-card-back {
 transform: rotateY(180deg);
 z-index: 1;
-}
+} */
 
 @keyframes flipBannerCard {
 	0% {transform: rotateY(0deg);}
 	25% {transform: rotateY(0deg);}
-	50% {transform: rotateY(180deg);}
-	68% {transform: rotateY(0deg);}
-	85% {transform: rotateY(180deg);}
+	40% {transform: rotateY(180deg);}
+	60% {transform: rotateY(0deg);}
+	80% {transform: rotateY(180deg);}
 	100% {transform: rotateY(0deg);}
-} */
+}
 
 .columnFooterInfo {
 	text-align : center;
