--- a/css/Tadekam.css
+++ b/css/Tadekam.css
@@ -211,7 +211,7 @@ body {
 
 .titleContentBorder {
 	border-bottom:1px solid #d8323d;
-	margin-top:15%;
+	margin-top:5%;
 	margin-bottom:0%;
 }
 
@@ -233,6 +233,10 @@ body {
 .textRow div {
 	padding:0;
 	margin:0;
+}
+
+.textRow a {
+	color:#d8323d;
 }
 
 
@@ -338,12 +342,11 @@ body {
 }
 
 .footer {
-	background-color : #f6e7ab;
+	background-color : #fdf6bb;
 	color : #996a0e;
 	font-family : "fontPoppins";
 	font-size : 16px;
 	margin : 0;
-	margin-top:2%;
 }
 
 .footerRow1 {
@@ -359,8 +362,8 @@ body {
 }
 
 .footerBand {
-	background-color : #996a0e;
-	color : #ffffff;
+	background-color : #edd18c;
+	color : #996a0e;
 	text-align: center;
 	font-family : "fontPoppins";
 	font-size : 12px;
@@ -446,6 +449,16 @@ body {
 	margin:0;
 }
 
+.homeGurujiQuote .textRow{
+	font-size:26px;
+	font-family: "fontPlayfairDisplay";
+	margin-top:0;
+}
+
+.homeGurujiQuote .titleContentHeader {
+	font-size:20px;
+}
+
 .homeGurujiQuote img {
 	width:100%;
 }
@@ -453,4 +466,46 @@ body {
 .homeTadekamForYouTextRow {
     text-align: left;
     color: #ffffff;
+}
+
+.homeTadekamForYouTextRow ul {
+	margin:0;
+	padding-left:25px;
+}
+
+.homeTadekamForYouTextRow ul li {
+	margin-top:5%;
+	margin-bottom:5%;
+	font-size:16px;
+}
+
+.backgroundJourneySoFarAboutTadekam {
+	background: url(../images/background_off_white.png);
+	padding-bottom:4%;
+	margin-top:4%;
+}
+
+.quoteName {
+	margin-top:5%;
+}
+
+.backgroundHomePrograms {
+	background: url(../images/pink_flowers.png);
+	padding-bottom:4%;
+	background-size: 100%;
+	background-repeat: no-repeat;
+}
+
+.homeProgramsImageHolder {
+	margin-top:5%;
+}
+
+.homeProgramsImageHolder img{
+	transition: .3s ease-in-out;
+	cursor: pointer;
+	width:90%;
+}
+
+.homeProgramsImageHolder:hover img {
+	transform: scale(1.1);
 }
