--- a/css/Tadekam.css
+++ b/css/Tadekam.css
@@ -473,8 +473,8 @@ body {
 	text-align: center;
 }
 
-.collapsedRow.collapse {
-	margin-top: 3%;
+.collapsedRow {
+	margin-top: 0%;
 }
 
 .collapsedRow.collapsing {
@@ -482,7 +482,7 @@ body {
 }
 
 .collapsedRow.collapse.in {
-	margin-top: 3%;
+	height: auto;
 }
 
 .hideCollapsibleArrow {
@@ -494,7 +494,7 @@ body {
 	font-size:13px;
 	color:#d8323d;
 	font-family: "fontPoppins";
-	margin-top:3%;
+	margin-top:2%;
 }
 
 .collapsibleArrow {
