--- a/css/Tadekam.css
+++ b/css/Tadekam.css
@@ -661,6 +661,8 @@ body {
 
 .mediaContainer {
 	font-family: "fontPoppins";
+	margin-top:3%;
+	margin-bottom:3%;
 }
 
 .mediaContainer .nav-pills>li {
