--- a/css/Tadekam.css
+++ b/css/Tadekam.css
@@ -375,6 +375,10 @@ body {
 	width:100%;
 }
 
+.teamTadekamBackground {
+	margin-bottom:1%;
+}
+
 .namePhotoHolder {
 	text-align:center;
 	margin-top:3%;
@@ -455,6 +459,7 @@ body {
 	background: url(../images/pink_flowers.png);
 	background-size: 100%;
 	background-repeat: no-repeat;
+    margin-bottom: 1%;
 }
 
 .homeProgramsImageHolder {
@@ -659,25 +664,28 @@ body {
 	margin-bottom:3%;
 }
 
-.mediaContainer {
+#mainContentMediaMenu {
 	font-family: "fontPoppins";
+}
+
+.mediaContainer {
 	margin-top:3%;
 	margin-bottom:3%;
 }
 
-.mediaContainer .nav-pills>li {
+#mainContentMediaMenu .nav-pills>li {
 	background-color: transparent;
 }
 
-.mediaContainer .nav-pills>li.active>a,
-.mediaContainer .nav-pills>li.active>a:hover,
-.mediaContainer .nav-pills>li>a:hover {
+#mainContentMediaMenu .nav-pills>li.active>a,
+#mainContentMediaMenu .nav-pills>li.active>a:hover,
+#mainContentMediaMenu .nav-pills>li>a:hover {
 	background-color: transparent;
 }
 
-.mediaContainer .nav-pills>li.active>a[data-toggle="pill"],
-.mediaContainer .nav-pills>li.active>a[data-toggle="pill"]:hover,
-.mediaContainer .nav-pills>li>a[data-toggle="pill"]:hover {
+#mainContentMediaMenu .nav-pills>li.active>a[data-toggle="pill"],
+#mainContentMediaMenuiaMenu .nav-pills>li.active>a[data-toggle="pill"]:hover,
+#mainContentMediaMenu .nav-pills>li>a[data-toggle="pill"]:hover {
 	color:#d8323d;
 }
 
@@ -685,4 +693,39 @@ body {
 	width:100%;
 	margin-top:2%;
 	margin-bottom:2%;
+}
+
+.bookImageContainer {
+	background-image: url('../images/background_seamless_pattern.png');
+	color:#996a0e;
+	font-size:16px;
+	text-align: center;
+	padding-left:0;
+	padding-right:0;
+	padding-top:2%;
+	padding-bottom:2%;
+}
+
+.bookDescription {
+	text-align: center;
+	color:#996a0e;
+	font-size:14px;
+	margin-top:2%;
+	padding-bottom:2%;
+}
+
+.bookDescription .btn-primary,
+.bookDescription .btn-primary>a {
+	color:#ffffff;
+	background-color:#d8323d;
+	border:0px;
+	margin-top:1%;
+}
+
+.bookDescription .btn-primary:hover,
+.bookDescription .btn-primary>a:hover {
+	color:#ffffff;
+	background-color:#d8323d;
+	border:0px;
+	text-decoration: none;
 }
