--- a/css/Tadekam.css
+++ b/css/Tadekam.css
@@ -488,6 +488,13 @@ body {
 	padding-bottom: 2%;
 }
 
+.programTitle {
+	font-weight: bold;
+    font-size: 18px;
+    margin-bottom: 1%;
+    margin-top: 1%;
+}
+
 .spiritualProgramsContainer {
 	background: url('../images/background_seamless_pattern.png');
 	margin-top: 3%;
