--- a/css/Tadekam.css
+++ b/css/Tadekam.css
@@ -263,7 +263,7 @@ body {
 
 .footer {
 	background-color :#996a0e ;
-	color : #fdf6bb;
+	color : #ffffff;
 	font-family : "fontPoppins";
 	font-size : 13px;
 	margin:0;
