--- a/css/Tadekam.css
+++ b/css/Tadekam.css
@@ -287,7 +287,7 @@ body {
 
 .footerBand {
 	background-color :#996a0e ;
-	color : #fdf6bb;
+	color : #ffffff;
 	text-align: center;
 	font-family : "fontPoppins";
 	font-size : 12px;
