--- a/css/Tadekam_Mobile.css
+++ b/css/Tadekam_Mobile.css
@@ -157,14 +157,21 @@
     font-size: 14px;
 }
 
-.footerText .fa {
-    font-size: 16px;
+.footerText img {
+    padding: 0;
+    padding-right: 5px;
+    padding-left: 5px;
+}
+
+.footerRow2 {
+	padding-bottom:0;
 }
 
 .columnFooterMenu {
 	padding: 0;
 	text-align : center;
-    font-size: 14px;
+	font-size: 14px;
+	margin-bottom: 2%;
 }
 
 .footerBand {
