--- a/css/Tadekam_Mobile.css
+++ b/css/Tadekam_Mobile.css
@@ -208,7 +208,7 @@
 }
 
 .teamTadekamBackground {
-	padding-bottom:5%;
+	padding-bottom:6%;
 }
 
 .homeGurujiQuote {
@@ -243,6 +243,10 @@
 .programHolder {
     padding: 0;
     margin-bottom: 15%;
+}
+
+.programHolder .titleContentBorder {
+	margin-top:5%;
 }
 
 .programTitle {
@@ -291,9 +295,29 @@
     width: 100%;
 }
 
+.bookImageContainer {
+    padding-top: 6%;
+    padding-bottom: 6%;
+}
+
+.bookDescription {
+	margin-top: 5%;
+}
+
+.bookDescription .btn-primary, .bookDescription .btn-primary>a {
+    margin-top: 5%;
+    margin-bottom: 5%;
+}
+
+.mediaContainer iframe {
+	margin-top: 3%;
+    margin-bottom: 3%;
+}
+
 #mainContentMediaMenu .nav-pills>li>a,
 #mainContentMediaMenu .nav-pills>li>a:hover {
 	padding:0;
+	color:#996a0e;
 }
 
 #mainContentMediaMenu ul {
