--- a/css/Tadekam.css
+++ b/css/Tadekam.css
@@ -290,7 +290,7 @@ z-index: 1;
 	color : #ffffff;
 	text-align: center;
 	font-family : "fontPoppins";
-	font-size : 13px;
+	font-size : 9px;
 	line-height:50px;
 	margin : 0;
 }
@@ -300,7 +300,7 @@ z-index: 1;
 }
 
 .footerMenuSelected {
-	color : red;
+	color : #432304;
 }
 
 .columnFooterInfo {
@@ -317,10 +317,16 @@ z-index: 1;
 	font-family : "fontPoppins";
 }
 
+.footerTextImg {
+	width:14px;
+}
+
 .footerText img {
-	padding-left:5px;
-	padding-right:5px;
+	padding-left:4px;
+	padding-right:4px;
 	vertical-align: top;
+	cursor: pointer;
+	width: 24px;
 }
 
 .programHolder {
@@ -583,6 +589,10 @@ z-index: 1;
 	width:100%;
 }
 
+.contactUsRow:first-of-type {
+	margin-top:3%;
+}
+
 .contactUsRow {
 	font-family : "fontPoppins";
 	text-align: center;
@@ -591,7 +601,10 @@ z-index: 1;
 }
 
 .contactUsForm {
-	border:1px solid #996a0e;
+	padding-top: 10%;
+    padding-bottom: 5%;
+	margin-top:7%;
+	margin-bottom:7%;
 	background: url(../images/background_seamless_pattern.png);
 }
 
@@ -603,6 +616,7 @@ z-index: 1;
 .contactUsForm .contactDetailsRow {
 	margin-top:7%;
 	margin-bottom:7%;
+    text-align: left;
 }
 
 .contactUsForm .row input {
@@ -614,6 +628,22 @@ z-index: 1;
 	border:1px solid #996a0e;
 	width: 100%;
 	resize: none; 
+}
+
+.contactButtonRow {
+	text-align: center !important;
+}
+
+.contactButtonRow a{
+	text-decoration: none;
+	color:#ffffff;
+}
+
+
+.contactButtonRow .btn{
+	background-color:#d8323d;
+	color:#ffffff;
+	border:none;
 }
 
 .galleryImage {
