--- a/css/Tadekam_Desktop.css
+++ b/css/Tadekam_Desktop.css
@@ -149,7 +149,8 @@
 .columnFooterMenu {
 	margin-left: 2%;
     padding: 0;
-    margin-right: 2%;
+	margin-right: 2%;
+	text-align: center;
 }
 
 .footerRow2 {
