--- a/css/Tadekam_Mobile.css
+++ b/css/Tadekam_Mobile.css
@@ -202,6 +202,10 @@
 	margin-top:10%;
 }
 
+.photoNameRow {
+	margin-top:3%;
+}
+
 .backgroundJourneySoFarAboutTadekam {
 	padding-bottom:5%;
 	margin-top:5%;
