--- a/css/Tadekam_Mobile.css
+++ b/css/Tadekam_Mobile.css
@@ -22,6 +22,7 @@
 	border: 0px;
 	font-size: 20px;
 	transition:all 0.2s ease-in-out;
+	-webkit-transition:all 0.2s ease-in-out;
     padding-right: 5%;
     padding-top: 3%;
 }
@@ -49,6 +50,7 @@
 	opacity:0.93;
 	z-index:100;
 	transition:all 0.6s ease-in;
+	-webkit-transition:all 0.6s ease-in;
 	border:0px;
 	min-height:0px;
 }
@@ -140,6 +142,7 @@
 
 .flip-card-inner {
 	animation: flipBannerCard 18s infinite;
+	-webkit-animation: flipBannerCard 18s infinite;
 }
 
 @keyframes flipBannerCard {
@@ -149,6 +152,15 @@
 	60% {transform: rotateY(0deg);}
 	80% {transform: rotateY(180deg);}
 	100% {transform: rotateY(0deg);}
+}
+
+@-webkit-keyframes flipBannerCard {
+	0% {transform: rotateY(0deg);-webkit-transform: rotateY(0deg);}
+	10% {transform: rotateY(0deg);-webkit-transform: rotateY(0deg);}
+	30% {transform: rotateY(180deg);-webkit-transform: rotateY(180deg);}
+	60% {transform: rotateY(0deg);-webkit-transform: rotateY(0deg);}
+	80% {transform: rotateY(180deg);-webkit-transform: rotateY(180deg);}
+	100% {transform: rotateY(180deg);-webkit-transform: rotateY(180deg);}
 }
 
 .columnFooterInfo {
