--- a/css/Tadekam.css
+++ b/css/Tadekam.css
@@ -692,6 +692,22 @@ width: 80%;
 	border:none;
 }
 
+.contactButtonRow input[type="submit"]{
+	background-color:#d8323d;
+	color:#ffffff;
+	border:none;
+    width: auto;
+    height: 30px;
+    padding-right: 10px;
+    padding-left: 10px;
+    padding-top: 2px;
+    padding-bottom: 2px;
+}
+
+#errorArea {
+	text-align: center;
+}
+
 .bannerGallery img {
 	width:100%;
 }
