--- a/css/Swapnali_Desktop.css
+++ b/css/Swapnali_Desktop.css
@@ -94,11 +94,26 @@
 	height : 70%;
 	padding: 0;
 	margin: 0;
+	cursor : pointer;
 }
 
 .workImage img {
 	height:100%;
 	width:100%;
+}
+
+.workImage .after {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+	opacity: 0;
+	transition: opacity 0.5s;
+}
+.workImage:hover .after {
+	opacity : 1;
+    background: rgba(0, 0, 0, .6);
 }
 
 .aboutMeContent {
