Commit for Mobile device

--- a/css/Swapnali_Mobile.css
+++ b/css/Swapnali_Mobile.css
@@ -106,8 +106,8 @@
 }
 
 .menuOptionTextSelected {
-	color : #000000;
-	text-decoration: line-through;
+	color : #000000 !important;
+	text-decoration: line-through !important;
 }
 
 .connectImageHolder img {
