--- a/css/Swapnali.css
+++ b/css/Swapnali.css
@@ -134,3 +134,15 @@ body {
 .locationDetailRow {
 	line-height:40px;
 }
+
+.workImage .after {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+	opacity: 0;
+	transition: opacity 0.5s;
+	display:table;
+	text-decoration: none;
+}
