--- a/css/Swapnali_Desktop.css
+++ b/css/Swapnali_Desktop.css
@@ -9,7 +9,7 @@
 .menuOption {
 	display:table;
 	text-align:center;
-	height:100%;
+	height:60%;
 	padding : 0;
 	border-radius: 0 !important;
 }
@@ -99,12 +99,25 @@
 	width : 100%;
 }
 
+.connectImageHolder {
+	padding :0;
+}
+
 .connectImageHolder img {
 	width : 100%;
 }
 
 .connectContent {
 	text-align: center;
+}
+
+.connectIconHolder img {
+	width:20px;
+}
+
+.connectContentRow {
+	margin-top : 20px;
+	margin-bottom : 20px;
 }
 
 .headerSocialMedia {
