--- a/css/Swapnali.css
+++ b/css/Swapnali.css
@@ -174,3 +174,11 @@ button {
     border: none;
     width: 100%;
 }
+
+.portfolioDetailImageHolder {
+	display:none;
+}
+
+.portfolioDetailImageHolderSelected {
+	display:block;
+}
