--- a/css/Swapnali.css
+++ b/css/Swapnali.css
@@ -71,7 +71,9 @@ body {
 .workImage .after {
     position: absolute;
     top: 0;
-    left: 0;
+	left: 0;
+	right:0;
+	bottom:0;
     width: 100%;
     height: 100%;
 	opacity: 0;
@@ -122,4 +124,10 @@ button {
     height: 20px;
 	width: 20px;
 	cursor:pointer;
+}
+
+.centerAlignImage {
+	display:block;
+	margin-left:auto;
+	margin-right:auto;
 }
