--- a/css/Swapnali.css
+++ b/css/Swapnali.css
@@ -78,7 +78,7 @@ body {
     height: 100%;
 	opacity: 0;
 	transition: opacity 0.5s;
-	display:table;
+	display:inline-block;
 	text-decoration: none;
 }
 
