--- a/css/Swapnali_Desktop.css
+++ b/css/Swapnali_Desktop.css
@@ -78,13 +78,14 @@
 }
 
 .portfolioInfo {
-    display: table-cell;
+    display: block;
     font-size: 22px;
     color: white;
-    vertical-align: middle;
 	text-align: center;
 	font-family: "fontKarlaRegular";
 	font-weight:normal;
+	position: relative;
+	top:50%;
 }
 
 .portfolioInfo span {
