--- a/css/Swapnali_Desktop.css
+++ b/css/Swapnali_Desktop.css
@@ -85,7 +85,9 @@
 	font-family: "fontKarlaRegular";
 	font-weight:normal;
 	position: relative;
-	top:50%;
+	top:45%;
+	height:100%;
+	width:100%;
 }
 
 .portfolioInfo span {
