--- a/css/Swapnali_Desktop.css
+++ b/css/Swapnali_Desktop.css
@@ -95,7 +95,11 @@
 }
 
 .aboutMeContent {
-	text-align: left;
+	text-align: center;
+	margin-top: 15px;
+	font-size: 16px;
+	margin-right:15px;
+	margin-left:5px;
 }
 
 .aboutMeImageHolder img {
@@ -137,4 +141,14 @@
 	margin-left:5px;
 	height:15px;
 	width:15px;
+}
+
+.aboutMeHolder {
+	display:table;
+	height:100%;
+}
+
+.aboutMeContainer {
+	display: table-cell;
+	vertical-align: middle;
 }
