Adjusting menu for Mobile device

--- a/css/Swapnali_Mobile.css
+++ b/css/Swapnali_Mobile.css
@@ -61,14 +61,14 @@
 }
 
 .menuOption {
-	display : inline-block;
+	display : table;
 	text-align : center;
 	height:auto;
 	/*width:100%;*/
 }
 
  .menuOptionText {
-	display:inline;
+	display:table-cell;
 }
 
 .menuOptionText div {
