--- a/css/Swapnali_Desktop.css
+++ b/css/Swapnali_Desktop.css
@@ -98,8 +98,8 @@
 	text-align: center;
 	margin-top: 15px;
 	font-size: 16px;
-	margin-right:15px;
-	margin-left:5px;
+	/* margin-right:15px;
+	margin-left:5px; */
 }
 
 .aboutMeImageHolder img {
@@ -143,7 +143,7 @@
 	width:15px;
 }
 
-.aboutMeHolder {
+/* .aboutMeHolder {
 	display:table;
 	height:100%;
 }
@@ -151,4 +151,4 @@
 .aboutMeContainer {
 	display: table-cell;
 	vertical-align: middle;
-}
+} */
