--- a/css/Swapnali_Mobile.css
+++ b/css/Swapnali_Mobile.css
@@ -130,3 +130,16 @@
 .headerSocialMedia {
 	display:none;
 }
+
+.portfolioInfo {
+    display: block;
+    font-size: 22px;
+    color: white;
+	text-align: center;
+	font-family: "fontKarlaRegular";
+	font-weight:normal;
+	position: relative;
+	top:45%;
+	height:100%;
+	width:100%;
+}
